# portfolio

./: Cargo.toml  index.html  index.scss
src/: app.rs  main.rs  routes.rs
src/components/: mod.rs  nav_item.rs  navbar.rs  webgl_canvas.rs
src/contexts/: mod.rs  theme.rs
src/shaders/: basic.frag  basic.vert
styles/: _colors.scss  navbar.scss  webglcanvas.scss
