[package]
name = "yew-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.8.0"
gloo-console = "0.2.3"
gloo-render = "0.1.1"
gloo-timers = "0.2.6"
gloo-utils = "0.1.6"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["HtmlCanvasElement", "WebGlBuffer", "WebGlProgram", "WebGlRenderingContext", "WebGlShader", "WebGlUniformLocation", "Window", "Performance", "console" ] }
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"
yew-router = "0.17.0"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
